<resources>
    <string name="app_name">InPost Recruitment Task</string>

    <string name="status_adopted_at_sorting_center">Accepted at the Sorting Room</string>
    <string name="status_sent_from_sorting_center">Sent from the Sorting House</string>
    <string name="status_adopted_at_source_branch">Accepted at the Branch</string>
    <string name="status_sent_from_source_branch">Sent from the Branch</string>
    <string name="status_avizo">Back to the Branch</string>
    <string name="status_confirmed">In preparation</string>
    <string name="status_created">Shipment created</string>
    <string name="status_delivered">Received</string>
    <string name="status_other">Other status</string>
    <string name="status_out_for_delivery">Released for delivery</string>
    <string name="status_pickup_time_expired">The pick-up time has passed</string>
    <string name="status_ready_to_pickup">Ready to pick up</string>
    <string name="status_returned_to_sender">Return to the sender</string>
    <string name="ready_to_pick_up">Ready to pick up</string>
    <string name="not_ready">Not Ready</string>
    <string name="the_remaining">The remaining</string>
    <string name="all">All</string>
    <string name="number">Parcel Number</string>
    <string name="pickup_date">PickUp date</string>
    <string name="expire_date">Expire date</string>
    <string name="stored_date">Stored date</string>
    <string name="item_parcel_number">PARCEL NUMBER</string>
    <string name="item_status">STATUS</string>
    <string name="item_sender">SENDER</string>
</resources>
